--- a/config/database.yml
+++ b/config/database.yml
@@ -84,3 +84,4 @@ production:
   database: Budget_App_production
   username: Budget_App
   password: <%= ENV["BUDGET_APP_DATABASE_PASSWORD"] %>
+  url: <%= ENV['DATABASE_URL'] %>
